--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: ruby
 rvm:
   - "2.0.0"
   - "2.4.1"
-  - jruby-19mode
-  - rbx-19mode
+  - "2.5.3"
+  - "2.6.1"
+  - jruby-9.1.9.0
+  - rbx-2.2.7
 script: bundle exec rspec spec
